@@ -327,6 +327,7 @@ group { name: "elm/scroller/base/default";
             set_int(sbalways_v, 0);
             set_int(sbalways_h, 0);
             set_int(sbvis_timer, 0);
+            emit("reload", "elm");
          }
       }
 
